<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

    <Button
        android:id="@+id/closePreviewButton"
        android:layout_marginLeft="4dip"
        android:paddingLeft="4dip"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:backgroundTint="#62e8e0"
        android:visibility="invisible"
        android:drawableLeft="@drawable/exit_icon"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/savePreviewButton"
        android:layout_marginLeft="4dip"
        android:paddingLeft="4dip"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:backgroundTint="#62e8e0"
        android:visibility="invisible"
        android:drawableLeft="@drawable/save_icon"
        android:text="Save"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/processPreviewButton"
        android:layout_marginRight="4dip"
        android:paddingLeft="4dip"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:backgroundTint="#62e8e0"
        android:visibility="invisible"
        android:drawableLeft="@drawable/process_icon"
        android:text="Process"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/shareButton"
        android:layout_marginRight="4dip"
        android:paddingLeft="4dip"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:backgroundTint="#62e8e0"
        android:visibility="invisible"
        android:drawableLeft="@drawable/share_icon"
        android:text="Share"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/feedbackButton"
        android:layout_marginRight="4dip"
        android:paddingLeft="4dip"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:backgroundTint="#62e8e0"
        android:visibility="invisible"
        android:drawableLeft="@drawable/feedback_icon"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageCaptureButton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="40dp"
        android:drawableTop="@drawable/shutter_icon_large"
        android:drawableTint="#62e8e0"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>